--- a/src/styles.css
+++ b/src/styles.css
@@ -63,6 +63,7 @@ a:active {
   display: flex;
   color: #FFF;
   background-color: rgb(0, 255, 204);
+  background-color: pink;
   border-bottom: 1px solid rgb(150, 0, 154);
   grid-column-start: 1;
   grid-column-end:   3;
